--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "python3",
+    "python.linting.enabled": true,
+    "python.formatting.blackPath": "black",
+    "python.formatting.provider": "black",
+    "jupyter.jupyterServerType": "local",
 }
